Add GitHub Sponsors badge and pre-release support
- Add dynamic GitHub Sponsors badge to README showing sponsor count
- Update release workflow to automatically detect pre-releases
- Pre-release versions (e.g., v1.0.0-beta.1) won't take over 'latest' status
- Stable releases (e.g., v1.0.0) continue to update 'latest' as normal
- Uses semantic versioning convention to detect pre-releases (hyphen + letters)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,6 +49,15 @@ jobs:
           VERSION=${GITHUB_REF#refs/tags/v}
         fi
         echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+        
+        # Detect if this is a pre-release (contains -alpha, -beta, -rc, etc.)
+        if [[ "$VERSION" =~ -[a-zA-Z] ]]; then
+          echo "PRERELEASE=true" >> $GITHUB_OUTPUT
+          echo "Pre-release detected: $VERSION"
+        else
+          echo "PRERELEASE=false" >> $GITHUB_OUTPUT
+          echo "Stable release: $VERSION"
+        fi
         echo "Building version: $VERSION"
     
     - name: Set up Swift
@@ -348,7 +357,7 @@ jobs:
         name: Release v${{ steps.version.outputs.VERSION }}
         body_path: release_notes.md
         draft: false
-        prerelease: false
+        prerelease: ${{ steps.version.outputs.PRERELEASE }}
         files: |
           ${{ env.APP_NAME }}-${{ steps.version.outputs.VERSION }}.pkg
           ${{ env.APP_NAME }}-${{ steps.version.outputs.VERSION }}-macos-binary.tar.gz
